--- a/index.html
+++ b/index.html
@@ -75,13 +75,13 @@
         <h3 class="margin">About Me</h3><br>
         <div class="row">
             <div class="col-sm-4">
-                <p>big money</p>
+                <p>big money.</p>
             </div>
             <div class="col-sm-4">
-                <p>bam</p>
+                <p>bambino.</p>
             </div>
             <div class="col-sm-4">
-                <p>fig get the money</p>
+                <p>dogs.</p>
             </div>
         </div>
     </div>
