--- a/projects/octopus.html
+++ b/projects/octopus.html
@@ -43,9 +43,9 @@
     <div class="container-fluid bg-1">
         <div class="container">
 
-            <h1 class="margin text-center">Example Project</h1>
-            <p>Text about the project</p>
-            <p>More text about the project.</p>
+            <h1 class="margin text-center">Movie poster HTML/CSS Project!</h1>
+            <p>Octopus project</p>
+            <p>made in collabration with angela liu</p>
             <a href="#">Link about the project</a><br>
 
             <!--EXAMPLE OF PREVIEW LINK-->
