--- a/projects/octopus.html
+++ b/projects/octopus.html
@@ -43,10 +43,12 @@
     <div class="container-fluid bg-1">
         <div class="container">
 
-            <h1 class="margin text-center">Movie poster HTML/CSS Project!</h1>
+            <h1 class="margin text-center"> Movie poster HTML/CSS Project!</h1>
             <p>Octopus project</p>
             <p>made in collabration with angela liu</p>
-            <a href="#">Link about the project</a><br>
+            <a href="https://Octopus.angelal8336.repl.co">preview of the project</a><br>
+                        <a href="https://replit.com/@angelal8336/Octopus?from=notifications#index.html">inside the project</a><br>
+
 
             <!--EXAMPLE OF PREVIEW LINK-->
             <!--<a href="http://yourUserName.github.io/yourRepoName">Preview</a><br>-->
