--- a/projects/octopus.html
+++ b/projects/octopus.html
@@ -44,8 +44,8 @@
         <div class="container">
 
             <h1 class="margin text-center">octopus Project</h1>
-            <p>Text about the project</p>
-            <p>More text about the project.</p>
+            <p>created with CSS and HTML</p>
+            <p>Made in partnership with angela liu.</p>
             <a href="#">Link about the project</a><br>
 
             <!--EXAMPLE OF PREVIEW LINK-->
