--- a/projects/octopus.html
+++ b/projects/octopus.html
@@ -46,7 +46,9 @@
             <h1 class="margin text-center">octopus Project</h1>
             <p>created with CSS and HTML</p>
             <p>Made in partnership with angela liu.</p>
-            <a href="#">Link about the project</a><br>
+            <a href="https://Octopus.angelal8336.repl.co">preview of the project</a><br>
+                        <a href="https://replit.com/@angelal8336/Octopus?from=notifications#index.html">preview of the project</a><br>
+
 
             <!--EXAMPLE OF PREVIEW LINK-->
             <!--<a href="http://yourUserName.github.io/yourRepoName">Preview</a><br>-->
