--- a/projects/octopus.html
+++ b/projects/octopus.html
@@ -44,10 +44,13 @@
         <div class="container">
 
             <h1 class="margin text-center">octopus Project</h1>
-            <p>created with CSS and HTML</p>
-            <p>Made in partnership with angela liu.</p>
+            <h2>created with CSS and HTML</h2>
+            <h3>Made in partnership with angela liu.</h3>
+            <ul> Context: create a website about a movie that you and your partner make up. </ul>
+             <li><a href="https://Octopus.angelal8336.repl.co">preview of the project</a><br></li>
+             
             <a href="https://Octopus.angelal8336.repl.co">preview of the project</a><br>
-                        <a href="https://replit.com/@angelal8336/Octopus?from=notifications#index.html">preview of the project</a><br>
+                        <a href="https://replit.com/@angelal8336/Octopus?from=notifications#index.html">inside look at the project</a><br>
 
 
             <!--EXAMPLE OF PREVIEW LINK-->
