--- a/projects/octopus.html
+++ b/projects/octopus.html
@@ -62,8 +62,7 @@
                     but i want to stay with a plan.</li>
             </ul>
              
-            <a href="https://Octopus.angelal8336.repl.co">preview of the project</a><br>
-                        <a href="https://replit.com/@angelal8336/Octopus?from=notifications#index.html">inside look at the project</a><br>
+           
 
 
             <!--EXAMPLE OF PREVIEW LINK-->
@@ -71,7 +70,7 @@
             <!--EXAMPLE OF GITHUB LINK-->
             <!--<a href="http://github.com/yourUserName/yourRepoName">Github</a><br>-->
 
-            <img src="../img/avatar.png" class="img-fluid project-img">
+            <img src="../img/OCTOPI.png" class="img-fluid project-img">
 
 
             <div class="row">
