--- a/projects/cyoa.html
+++ b/projects/cyoa.html
@@ -45,15 +45,21 @@
 
             <h1 class="margin text-center">CYOA(create your own adventure!) Project</h1>
             <p>Context: we were tasked to create a storyline that branches off in many different ways, so that linking MD (markdown files) becomes practiced, and working with others at the same time, pushing and pulling in changes</p>
-            <p>More text about the project.</p>
-            <a href="#">Link about the project</a><br>
+            <li><a href="https://github.com/jonathanl0610/kidnapping-project-sep10B">link of the project</a><br></li>
+            <ul> Reflection!
+                <li>A major challenge I faced in this project was that if you pushed something to github, at the same time someone else was pushing something would cause a merge conflict</li>
+                <li>The way I found to stop having merge conflicts was to better communicate with my group mates when I am about to push something so that they don't push at the same time</li>
+                <li>Another thing I did was to read out the error that the terminal types out, and try to fix it, which does eventually work</li>
+                <li>Overall this project taught me how link to things in markdown, in turn teaching me how links on the internet in general</li>
+            </ul>
+
 
             <!--EXAMPLE OF PREVIEW LINK-->
             <!--<a href="http://yourUserName.github.io/yourRepoName">Preview</a><br>-->
             <!--EXAMPLE OF GITHUB LINK-->
             <!--<a href="http://github.com/yourUserName/yourRepoName">Github</a><br>-->
 
-            <img src="../img/avatar.png" class="img-fluid project-img">
+            <img src="/img/wham3.png" class="img-fluid project-img">
 
 
             <div class="row">
