--- a/projects/freedom-project.html
+++ b/projects/freedom-project.html
@@ -44,9 +44,9 @@
         <div class="container">
 
             <h1 class="margin text-center">Example Project</h1>
-            <p>Text about the project</p>
-            <p>More text about the project.</p>
-            <a href="#">Link about the project</a><br>
+            <p>My final project!</p>
+            <p>architecture</p>
+            <a href="#">https://jonathanl0610.github.io/sep10-freedom-project/</a><br>
 
             <!--EXAMPLE OF PREVIEW LINK-->
             <!--<a href="http://yourUserName.github.io/yourRepoName">Preview</a><br>-->
