--- a/index.html
+++ b/index.html
@@ -81,9 +81,9 @@
                 <div class="col-sm-4">
                     <div class="card">
                         <div class="card-body">
-                            <h5 class="card-title">Project Name</h5>
+                            <h5 class="card-title">architecture</h5>
                             <h6 class="card-subtitle mb-2 text-muted">10th Grade</h6>
-                            <p class="card-text">A brief explanation of the project.</p>
+                            <p class="card-text">A year in the making!</p>
                             <a href="projects/freedom-project.html" class="card-link">More</a>
                         </div>
                     </div>
