--- a/projects/freedom-project.html
+++ b/projects/freedom-project.html
@@ -43,10 +43,23 @@
     <div class="container-fluid bg-1">
         <div class="container">
 
-            <h1 class="margin text-center">Example Project</h1>
+            <h1 class="margin text-center">Freedom-project</h1>
             <p>My final project!</p>
             <p>architecture</p>
-            <a href="#">https://jonathanl0610.github.io/sep10-freedom-project/</a><br>
+            <p> Context: research a topic you are interested in that can be  connected with technology, I chose Architecture.</p>
+            <p> content: I wrote eight blog entries detailing the entire year long process that lead to the creation of the final product</p>
+            <ul> Takeaways!
+                <li> Have an open mind and "roll with the punches"</li>
+                <li> be patient and pay attention to the small details, because they make up the big picture</li>
+                <li> manage time so that YOU come out on top and not have to stress with the completion of the project</li>
+        </ul>
+
+
+            <a href="https://jonathanl0610.github.io/sep10-freedom-project/">Freedom-project</a><br>
+            <a href="https://docs.google.com/document/d/1IomMeK7YEFuCfx-PXweWVfhPAVgjV01Lnx3va6HhDw0/edit#">Blog</a><br>
+            <img src="/img/wog.png" class="img-fluid project-img">
+
+
 
             <!--EXAMPLE OF PREVIEW LINK-->
             <!--<a href="http://yourUserName.github.io/yourRepoName">Preview</a><br>-->
