--- a/projects/freedom-project.html
+++ b/projects/freedom-project.html
@@ -66,7 +66,7 @@
             <!--EXAMPLE OF GITHUB LINK-->
             <!--<a href="http://github.com/yourUserName/yourRepoName">Github</a><br>-->
 
-            <img src="../img/avatar.png" class="img-fluid project-img">
+            <!-- <img src="../img/avatar.png" class="img-fluid project-img"> -->
 
 
             <div class="row">
@@ -88,10 +88,10 @@
 
 
     <!-- Footer -->
-    <footer class="container-fluid bg-4 text-center">
+    <!-- <footer class="container-fluid bg-4 text-center">
         <a href="#" target="_blank" id="fork"><img src="../img/fork.png"></a><br>
         <a href="https://hstatsep.github.io" target="_blank"><img src="https://hstatsep.github.io/img/hstatsep-logo-small.png" id="sep"></a>
-    </footer>
+    </footer> -->
 
 
     <script src="../script.js"></script>
