--- a/index.html
+++ b/index.html
@@ -107,6 +107,23 @@
         </a>
     </div>
 
+
+                <div class="col-sm-4">
+                    <div class="card">
+                        <div class="card-body">
+                            <h5 class="card-title">beat-project!</h5>
+                            <h6 class="card-subtitle mb-2 text-muted">11th Grade</h6>
+                            <p class="card-text">A year in the making!</p>
+                            <a href="projects/freedom-project.html" class="card-link">More</a>
+                        </div>
+                    </div>
+                </div>
+
+
+
+
+
+    
     <!-- Third Container (Grid) -->
     <div class="container-fluid bg-3 text-center">
         <h3 class="margin">About Me</h3><br>
