--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                             <h5 class="card-title">beat-project!</h5>
                             <h6 class="card-subtitle mb-2 text-muted">11th Grade</h6>
                             <p class="card-text">A year in the making!</p>
-                            <a href="projects/freedom-project.html" class="card-link">More</a>
+                            <a href="projects/sep11-fp.html" class="card-link">More</a>
                         </div>
                     </div>
                 </div>
