--- a/projects/sep11-fp.html
+++ b/projects/sep11-fp.html
@@ -44,9 +44,29 @@
         <div class="container">
 
             <h1 class="margin text-center">sep11-freedom project!</h1>
-            <p>Beat-project/sound-board</p>
-            <p>More text about the project.</p>
-            <a href="#">Link about the project</a><br>
+            <h2>Beat-project/sound-board</h2>
+            <p>Context: sep11-freedom-project, tasked with choosing one or more tools to create a project due at the end of the year using JavaScript</p>
+            <p>Content: over the course of these blogs, I show a progression of my javascript abilties and milestones in the learning of my tool</p>
+            <p> implications:</p>
+            <ul> Social:
+            <li> individual: people will be able to connect with the project as they can actually interact with through clicking a mouse, and hearing/creating sounds/music.</li>
+            <li> relationships: people have a stronge bond to music, interacting with music will be able to create new bonds with people that use my project, looking deeper into how music shapes us.</li>
+            <li>culture: music is a culture, and it's genre's have cultures aswell, and those genres have sub-cultures as well. I hope my project adds to the culture of music.</li>
+            </ul>
+
+
+
+            <ul> Economic:
+            <li> jobs:a lot of people make a living of music, and I really like music so it would be cool if I could build off of this music project, branching off into making actual music.</li>
+            <li> finance:
+finding  beatkits/soundboards is difficult on the internet because most of the time, music and sound libraries are locked behind paywalls and subscriptions, and my project is free to use for those who want to.</li>
+                </ul>
+
+                <a href="https://jonathanl0610.github.io/sep11-freedom-project/">Freedom-project</a><br>
+                <a href="https://docs.google.com/presentation/d/1yHo2iNFqglOyMtos_2NfySCTtuh9JD0_zPPQPlb8DCE/edit#slide=id.p">slides</a><br>
+
+
+            
 
             <!--EXAMPLE OF PREVIEW LINK-->
             <!--<a href="http://yourUserName.github.io/yourRepoName">Preview</a><br>-->
