--- a/projects/sep11-fp.html
+++ b/projects/sep11-fp.html
@@ -73,7 +73,9 @@ finding  beatkits/soundboards is difficult on the internet because most of the t
             <!--EXAMPLE OF GITHUB LINK-->
             <!--<a href="http://github.com/yourUserName/yourRepoName">Github</a><br>-->
 
-            <img src="../img/avatar.png" class="img-fluid project-img">
+            <img src="../img/howler.png" class="img-fluid project-img">
+            <img src="../img/meow.png" class="img-fluid project-img">
+
 
 
             <div class="row">
